Fix overflow scroll-past bug

--- a/src/components/Form/RadioButton/radio-tab-group.css
+++ b/src/components/Form/RadioButton/radio-tab-group.css
@@ -2,6 +2,13 @@
     position : relative;
     overflow : hidden;
 
+    .rtg-options-container {
+        position   : relative;
+        overflow   : hidden;
+        width      : 100%;
+        height     : 100%;
+    }
+
     .rtg-options-wrapper {
         position      : relative;
         display       : inline-flex;
